# obs-plugintemplate-ai-vision

./: .aiexclude  .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  vcpkg-configuration.json  vcpkg.json
.github/actions/setup-macos-codesigning/: action.yaml
.github/workflows/: build-project.yaml  deploy-project.yaml  lint-cmake.yaml  lint-src.yaml
build-aux/: run-clang-format  run-gersemi
cmake/common/: init.cmake
cmake/linux/: compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/linux/resources/: version_script.map
cmake/macos/: compilerconfig.cmake  defaults.cmake  helpers.cmake  xcode.cmake
cmake/macos/resources/: exported_symbols_list.txt
cmake/windows/: defaults.cmake  helpers.cmake
scripts/: build-obs-studio-macos.sh  build-obs-studio-windows.ps1  download-deps.cmake  install-vcpkg-macos.sh  package-plugin-windows.ps1  verify-vcpkg-obs-kaito-tokyo-macos.sh  verify-vcpkg-obs-kaito-tokyo-ubuntu.sh  verify-vcpkg-obs-kaito-tokyo.sh
src/: plugin-main.cpp  plugin-support.h
